added mongolab mongodb for production db

--- a/app/config/mongoid.config
+++ b/app/config/mongoid.config
@@ -4,3 +4,10 @@ development:
       database: booklist_dev
       hosts:
         - localhost:27017
+production:
+  clients:
+    default:
+      uri: mongodb://heroku_k52jpw51:kj4a4lg3m32dcqbh6vtlgscvj9@ds139964.mlab.com:39964/heroku_k52jpw51
+
+      options:
+        connect_timeout: 15
